# minigc

./: CMakeLists.txt  Makefile  gc.c  gc.h  main.c
